--- a/ClientMessenger/Views/MainView.xaml
+++ b/ClientMessenger/Views/MainView.xaml
@@ -12,8 +12,8 @@
         <DataTemplate DataType="{x:Type vm:ClientChatViewModel}">
             <local:ClientChatView/>
         </DataTemplate>
-        <DataTemplate DataType="{x:Type vm:TemplateSecondViewModel}">
-            <local:TemplateSecondView/>
+        <DataTemplate DataType="{x:Type vm:RegistrationUserViewModel}">
+            <local:RegistrationUserView/>
         </DataTemplate>
     </Window.Resources>
     <Grid>
