--- a/ClientMessenger/Views/RegistrationUserView.xaml
+++ b/ClientMessenger/Views/RegistrationUserView.xaml
@@ -22,20 +22,14 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
         
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Name: " Margin="5"/>
-        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Name}" Margin="5"/> 
+        <TextBlock Grid.Row="0"  Text="Username: " Margin="5"/>
+        <TextBox Grid.Row="1" Text="{Binding Username}" Margin="5"/> 
         
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="LastName: " Margin="5"/>
-        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding LastName}" Margin="5"/>
-        
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="{Binding ErrorInfo}" Margin="5"/>
-        <Button Grid.Row="2" Grid.Column="1" Margin="5" Content="Join chat" Command="{Binding RegisterUserCommand}"/>
+        <Button Grid.Row="2" Margin="5" Content="Join chat" Command="{Binding RegisterUserCommand}"/>
+        <TextBlock Grid.Row="3"  Text="{Binding ErrorInfo}" Margin="5"/>
         
     </Grid>
 </UserControl>
