--- a/ClientMessenger/Views/ClientChatView.xaml
+++ b/ClientMessenger/Views/ClientChatView.xaml
@@ -49,17 +49,20 @@
                 <ColumnDefinition />
                 <ColumnDefinition Width="60" />
             </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" Margin="5 0 5 0"
-                     Style="{StaticResource MaterialDesignFilledTextBox}"
-                     TextWrapping="Wrap"
-                     MaxWidth="400"
-                     md:HintAssist.Hint="Message" />
-            <Button Grid.Column="1" Margin="5 0 5 0" Command="{Binding SendMessageCommand}">
-                <md:PackIcon  Kind="Send" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBox
+                Name="MessageTextBox"
+                Grid.Column="0" Margin="5 0 5 0"
+                Style="{StaticResource MaterialDesignFilledTextBox}"
+                TextWrapping="Wrap"
+                MaxWidth="400"
+                md:HintAssist.Hint="Message" />
+            <Button Grid.Column="1" Margin="5 0 5 0" Command="{Binding SendMessageCommand}"
+                    CommandParameter="{Binding ElementName=MessageTextBox, Path=Text}">
+                <md:PackIcon Kind="Send" VerticalAlignment="Center" HorizontalAlignment="Center" />
             </Button>
         </Grid>
-        
-        
+
+
         <ListView Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Margin="5"
                   ItemsSource="{Binding MessageManager.Messages}">
             <ListView.ItemTemplate>
@@ -70,12 +73,13 @@
                             Icon="{Binding  MessageBy[0]}"
                             Content="{Binding MessageBy}"
                             Style="{StaticResource MaterialDesignOutlineChip}" />
-                        <TextBlock Text="{Binding Content}" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBlock Text="{Binding Content}" TextWrapping="Wrap" HorizontalAlignment="Left"
+                                   VerticalAlignment="Center" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        
-        
+
+
     </Grid>
 </UserControl>
